2010-07-18  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditorData.cs: SelectionRange is now
	  always != null.

2010-07-18  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/TextEditorData.cs: Added some delegation
	  methods to the texteditordata to make its usage easier -
	  moved the advanced setcaret (with highlight & pulse) to the
	  texteditor.

2010-07-18  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/SyntaxModeService.cs:
	  comment-in span remove code.

2010-07-17  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/SyntaxMode.cs: pop span before
	  end tag.

2010-07-17  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/SyntaxMode.cs:
	* Mono.TextEditor.Highlighting/JaySyntaxMode.cs:
	* Mono.TextEditor.Highlighting/SyntaxModeService.cs: Worked on
	  syntax highlighting.

2010-07-17  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/Chunk.cs:
	* Mono.TextEditor.Highlighting/SyntaxMode.cs: Changed
	  highlighting.

2010-07-16  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Check span stack.

2010-07-16  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* Mono.TextEditor.csproj:
	* Styles/TangoLightStyle.xml:
	* Mono.TextEditor/LineSegment.cs:
	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor/ClipboardActions.cs:
	* Mono.TextEditor.Highlighting/Chunk.cs:
	* Mono.TextEditor.Highlighting/SyntaxMode.cs:
	* Mono.TextEditor.Highlighting/JaySyntaxMode.cs:
	* Mono.TextEditor.Highlighting/CloneableStack.cs:
	* Mono.TextEditor.Highlighting/SyntaxModeService.cs: Worked on
	  highlighting - it's now more speed & memory efficient and
	  fixed 'Bug 622108 - Background color issues'.

2010-07-15  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Added null check.

2010-07-14  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor.Highlighting/Style.cs: Fix colours.
